Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115740

QLocale for Spanish does not work correctly with thousands separators.

    XMLWordPrintable

Details

    • All, WebAssembly, Windows
    • c5515f5eb (dev), 712db87ac (6.6), adaaf0382 (6.5)
    • Foundation Sprint 88

    Description

      User informed us following example:

      int nDec = 0;
      QLocale::setDefault(QLocale(QLocale::Spanish, QLocale::Spain));
      double d=2004828;
      qDebug()<< QString("%L1").arg(d, 0, 'f', nDec);
      
      QLocale l;
      qDebug()<< l.toString(d, 'f', nDec);

      They were getting "2004.828" instead of "2.004.828" in WASM and the user is located in Spain.

      Qt Support tested the example outside of Spain and the end results were on both desktop and WASM "2004.828" which is not following the Spanish thousand separation:

      https://docs.oracle.com/cd/E19455-01/806-0169/overview-9/index.html

      Attachments

        For Gerrit Dashboard: QTBUG-115740
        # Subject Branch Project Status CR V

        Activity

          People

            Eddy Edward Welbourne
            tero.pelkonen Tero Pelkonen
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes