src/corelib/text/qlocale.cpp
@@ -3675,7 +3675,7 @@ QString QLocaleData::doubleToString(double d, int precision, DoubleForm form,
                 int bias = 2 + minExponentDigits;
                 // Decimal form may get grouping separators inserted:
                 if (groupDigits && decpt >= m_grouping_top + m_grouping_least)
-                    bias -= (decpt - m_grouping_top - m_grouping_least) / m_grouping_higher + 1;
+                    bias -= (decpt - m_grouping_least) / m_grouping_higher + 1;
                 // X = decpt - 1 needs two digits if decpt > 10:
                 if (decpt > 10 && minExponentDigits == 1)
                     ++bias;
@@ -3764,7 +3764,7 @@ QString QLocaleData::decimalForm(QString &&digits, int decpt, int precision,
         qsizetype i = decpt - m_grouping_least;
         if (i >= m_grouping_top) {
             digits.insert(i * digitWidth, group);
-            while ((i -= m_grouping_higher) >= m_grouping_top)
+            while ((i -= m_grouping_higher) > 0)
                 digits.insert(i * digitWidth, group);
         }
     }
@@ -3872,7 +3872,7 @@ QString QLocaleData::applyIntegerFormatting(QString &&numStr, bool negative, int
         if (i >= m_grouping_top) {
             numStr.insert(i * digitWidth, group);
             ++usedWidth;
-            while ((i -= m_grouping_higher) >= m_grouping_top) {
+            while ((i -= m_grouping_higher) > 0) {
                 numStr.insert(i * digitWidth, group);
                 ++usedWidth;
             }
@@ -4191,7 +4191,7 @@ bool QLocaleData::numberToCLocale(QStringView s, QLocale::NumberOptions number_o
                 if (last_separator_idx == -1) {
                     // Check distance from the beginning of the digits:
                     if (start_of_digits_idx == -1 || m_grouping_top > digitsInGroup
-                        || digitsInGroup >= m_grouping_higher + m_grouping_top) {
+                        || digitsInGroup >= m_grouping_least + m_grouping_top) {
                         return false;
                     }
                 } else {
